--- a/Jogo da velha/index.html
+++ b/Jogo da velha/index.html
@@ -26,6 +26,9 @@
             <div id="casa08" class="casa" onclick="jogada(this);"></div>
             <div id="casa09" class="casa" onclick="jogada(this);"></div>
         </div>
+        <div class="placarfundo">
+            
+        </div>
         <div id="placar">
             <p>Placar</p>
             <p>x: 0</p>
